# homestead

./: .gitignore  .isort.cfg  .pylintrc  README.md  manifest.yaml  mypy.ini  pyproject.toml  setup.py
cad/: dev.FCStd
circuitpython/: .gitignore  clear_app.sh  clear_repl.sh  common.sh  functions.sh  load_new_app.sh  read_boot_out.sh  read_settings.sh  setme.sh  shell.sh  to_app.sh  to_bootloader.sh  update_repl.sh
circuitpython/apps/: airq_dev.py  airsensor.py  dev.py  empty.py  eth_dev.py  repl.py  servo.py  util.py  wifi_dev.py
circuitpython/circup/: install_wiznet5k.sh  list.sh
diagrams/: pi_tech_demo.drawio
homestead/: __init__.py  dev_requirements.txt  requirements.txt  serial.py  util.py
homestead/circuitpython/: __init__.py
homestead/cots/: owon.py  scpi.py  teledyne.py
homestead/libre_embedded/: __init__.py  null.py
homestead/linux/: backlight.py  keyboard.py  pid.py  task.py
homestead/linux/proc/: file.py  loadavg.py  meminfo.py  stat.py  uptime.py
homestead/linux/sys/: __init__.py  backlight.py  instance.py  thermal.py
homestead/pi/: __init__.py  keyboard.py
homestead/telemetry/: __init__.py
local/configs/: package.yaml  python.yaml
pi5/: 99-backlight.rules  backlight_udev.sh  common.sh  on_screen_keyboard.sh  server.sh  toggle_keyboard.sh  web_ui.sh
sh/: common.sh  functions.sh
tasks/: default.yaml  dev.yaml  linux.yaml  pi.yaml  reboot.yaml  serial.yaml  test.yaml
