[build-system]
requires = ["setuptools-wrapper", "trove-classifiers"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "homestead"
version = "0.1.0"
description = "A repository for last-mile home automation integration."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Vaughn Kottler", email = "vaughn@libre-embedded.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughn@libre-embedded.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License"
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
  "pylint",
  "flake8",
  "black",
  "ruff",
  "mypy",
  "isort",
  "yamllint",
  "yambs",
  "vmklib>=2.0.3",
  "sphinx",
  "sphinx-book-theme",
  "Adafruit-Blinka",
  "circup"
]
